...
    <string name="account">Account</string>

    <string name="customer">Customer</string>
    <string name="distributor">Distributor</string>
    <string name="supplier">Supplier</string>

    <string name="search">Search</string>

    <string name="update">Update</string>
    <string name="update_information">Update Information</string>

    <string name="successfully_update">Successfully Update</string>

...
    <string name="user_exists">Currently there is a user sign in</string>


    <!-- Main Menu -->
    <!-- Home Strings -->
    <string name="search_product_empty">Please input product to search</string>
    <string name="home_login">Login</string>
    <string name="home_logo_cont_description">Home Logo</string>
    <string name="home_search_hint">Search : Rice, Beans, and ETC.</string>
    <string name="home_button_dist">Distributor</string>
    <string name="home_button_sell">Supplier</string>
    <string name="home_button_cont_dist">Distributor</string>
    <string name="home_button_cont_sell">Supplier</string>
...


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up_link">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="login_empty">Please input email / password</string>

    <!-- sign up related -->
    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_username">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up_city">City</string>
    <string name="sign_up_phone_number_prefix">+63</string>
    <string name="sign_up_phone_number">982384818</string>
    <string name="sign_up_string">Sign Up</string>

    <!-- Sign up Spinner items -->
    <string name="sign_up_user_type_placeholder">Choose Role</string>
    <string-array name="sign_up_user_type">
        <item>Customer - Retailer</item>
...
