...
        map:layout_constraintStart_toStartOf="parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".DeliveryDestinationMapActivity"/>

    <android.support.v7.widget.CardView
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="top"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        card_view:cardCornerRadius="4dp">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />


    </android.support.v7.widget.CardView>
...
